--- a/shop-web-app/Views/Shared/_Layout.cshtml
+++ b/shop-web-app/Views/Shared/_Layout.cshtml
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="~/shop_web_app.styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <script type="importmap">
+    {
+      "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@v0.178.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.178.0/examples/jsm/"
+      }
+    }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -66,24 +74,31 @@
         </div>
     </nav>
 
+    <div id="threeContainer"></div>
 
     <div class="container mt-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - shop_web_app - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/CreateHelper.js"></script>
     <script src="~/js/ProductDetailsHelper.js"></script>
     <script src="~/js/CreateOrderHelper.js"></script>
+    
+   
     @await RenderSectionAsync("Scripts", required: false)
+
+    
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2025 - shop_web_app - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
 </body>
 </html>
