--- a/shop-web-app/Views/Product/Details.cshtml
+++ b/shop-web-app/Views/Product/Details.cshtml
@@ -67,7 +67,11 @@
                             @if (User.IsInRole("admin") || User.IsInRole("employee"))
                             {
                                 <div class="row w-50 row-cols-1">
-                                    <div class="col bg-danger p-3 rounded bg-opacity-10">
+                                    <div class="col bg-danger p-3 rounded bg-opacity-10 my-2 d-grid">                                     
+                                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id" type="button" class="btn btn-lg btn-outline-danger">Edytuj produkt</a>
+                                    </div>
+
+                                    <div class="col bg-danger p-3 rounded bg-opacity-10 my-2">
                                         <h4>Widoczność</h4>
                                         @if (!Model.IsActive)
                                         {
@@ -85,7 +89,7 @@
                                         string modelPresentTextColor = Model.HasModel ? "text-success" : "text-danger";
                                     }
 
-                                    <div class="mt-3 col bg-info p-3 rounded bg-opacity-10">
+                                    <div class="my-2 col bg-info p-3 rounded bg-opacity-10">
                                         <h4>Moduł 3D</h4>
                                         <p>Ma model 3D?: <span class="@modelPresentTextColor">@modelPresentText</span></p>
                                                                      
