fixed pagination, style fix, no image handle

--- a/shop-web-app/Views/Account/Details.cshtml
+++ b/shop-web-app/Views/Account/Details.cshtml
@@ -22,7 +22,7 @@
             <div class="col-md-5 col-lg-4 order-md-last p-3">
                 <h4 class="mb-3 mt-1 text-center">Informacje o koncie</h4>
                 <div class="rounded shadow">
-                    <img src="https://cdn.pixabay.com/photo/2016/09/28/02/14/user-1699635_1280.png" class="d-block mt-4 mx-auto rounded" style="width: 200px; height: 200px;" alt="User profile icon">
+                    <img src="https://cdn.pixabay.com/photo/2016/09/28/02/14/user-1699635_1280.png" class="d-block p-4 mx-auto rounded" style="height: 200px;" alt="User profile icon">
                     <div class="p-3">
                         <div class="text-center">
                             <h5>@Model.AppUser.Name @Model.AppUser.Surname</h5>
