--- a/shop-web-app/Views/Account/Login.cshtml
+++ b/shop-web-app/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
 
         <form asp-action="Login">
             <div class="form-group mb-3">
-                <label asp-for="Email">Adres e-mail</label>
+                <label asp-for="Email"></label>
                 <input asp-for="Email" type="email" class="form-control" placeholder="Wprowadź adres e-mail">
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
