--- a/shop-web-app/Views/Home/Index.cshtml
+++ b/shop-web-app/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                     <p class="lead">Planujesz jakieś wyjście? Koniecznie zobacz sukienki damskie: mamy fasony mini, midi i maxi na letnie wieczory, a także stylowe dżinsy i spodnie, które świetnie leżą na każdej sylwetce.</p>
                 </div>
                 <div class="col-md-5">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/d4/9a/d49a3027b2c6247ca96bb30bf60c7a7d4dbb87c2.jpg?imwidth=657" >
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://images.pexels.com/photos/16633042/pexels-photo-16633042.jpeg">
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
                     <p class="lead">Odśwież codzienną garderobę perełkami z naszej kolekcji. Teraz znajdziesz w jednym miejscu wszystko, co najmodniejsze – od codziennej bazy, takiej jak spódnice i topy damskie, po dzianiny i odzież domową. </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/02/10/02108a055ef799bd96055b5de173003214fe481d.jpg?imwidth=657">
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://images.pexels.com/photos/11855637/pexels-photo-11855637.jpeg">
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                     <p class="lead">Planujesz jakieś wyjście? Koniecznie zobacz sukienki damskie: mamy fasony mini, midi i maxi na letnie wieczory, a także stylowe dżinsy i spodnie, które świetnie leżą na każdej sylwetce.</p>
                 </div>
                 <div class="col-md-5">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/69/e4/69e405e7dfb0b2960dc0661f9bf004561d7ec0b4.jpg?imwidth=657">
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://images.pexels.com/photos/14887042/pexels-photo-14887042.jpeg">
                 </div>
             </div>
 
